testsuite/tests/ghc-regress/parser/should_fail/readFail022.hs
module ShouldFail where

-- !!! a parenthesised lhs must have at least one parameter
(a # b) = a
